fix overlapping text in forum discussion section

--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,8 @@ body {
 }
 
 .largescrn-agenda {
-  height: 200px;
-  padding: -1rem;
+  height: 210px;
+  padding: 1rem;
   margin: 0 0.3rem;
 }
 
